--- a/tryswiftconf2016/day2/day2-11.md
+++ b/tryswiftconf2016/day2/day2-11.md
@@ -1,6 +1,6 @@
 # Day 2 - x
 
-* [xxx](https://twitter.com/xxxx)
+* [Chris Eidhof](https://twitter.com/chriseidhof)
 * タイトル
 
 ## Speaker
@@ -9,8 +9,12 @@
 
 * Generics
 * Undo
-* 
+
+* storyboardを使う機会は減ってきた
+* storyboardやセグエとGenericsとの相性
 
 ## 感想
 
 ## 関連
+
+* https://gist.github.com/chriseidhof/df2d56f02d9626e60b44
